2002-06-21  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm.1 (Examples): Language check.
	PipeRead as synchronous Exec.
	Better example for PipeRead. 

2002-06-21  olicha  <olivier.chapuis@free.fr>

	* fvwm/fvwm.1: 
	* NEWS:
	Documented StringEncoding= in font name

	* INSTALL.fvwm
	Removed --disable-compound-text doc

2002-06-20  olicha  <olivier.chapuis@free.fr>

	* libs/FBidi.h (FBidiConvert):
	Fixed compile if !HAVE_BIDI

2002-06-19  olicha  <olivier.chapuis@free.fr>

	* fvwm/fvwm.c (InitVariables):
	(StartupStuff):
	Allocate colorset 0 in InitVariable in the place of StartupStuff.
	This fix a "null expression" at init in menustyle.c (menustyle_update)

2002-06-19  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	reworded supported feature listing, fixed the default xft detection
	* INSTALL.fvwm:
	added the "Supported Features" section

2002-06-19  olicha  <olivier.chapuis@free.fr>

	* fvwm/colorset.h:
	Removed not useful #define/#undef FVWM_COLORSET_PRIVATE

	* INSTALL.fvwm:
	Removed --enable-mulibyte and --disable-compound-text config option
	documentation. s/enable-xft/disable-xft/ and document --disable-xrender

	* configure.in:
	Xft is on by default no

	* libs/FlocaleCharset.c (*):
	* libs/FlocaleCharset.h:
	* libs/Ficonv.c (*):
	* libs/Ficonv.h:
	* libs/Flocale.c (*):
	* libs/Flocale.h:
	* libs/Fft.c (*):
	* libs/FftInterface.h:
	* libs/FBidi.c:
	* libs/FBidi.h:
	* fvwm/ewmh_names.c ():
	Some cleanup. Implemented StringEncoding= in font names. Fixed
	string encoding for xft fonts. Try to be more cleaver about defaults
	charsets. Improvement in the locale charset table.

	* fvwm/fvwm.1:
	Some documentation cleanup regarding Xft

2002-06-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/functions.c (find_func_type):
	fixed bug i introduced w/ last commit

	* fvwm/fvwm.c (Done):
	(StartupStuff):
	* fvwm/functions.c (functions_is_complex_function):
	* fvwm/builtins.c (CMD_DestroyFunc):
	(CMD_AddToFunc):
	(CMD_Plus):
	moved functions to functions.c