@@ -1,12 +1,17 @@
+2002-06-23  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/events.c (WaitForButtonsUp):
+	use the wait cursot only after the 20th pass through the loop
+
 2002-06-21  Dan Espen  <dane@mk.telcordia.com>
 
 	* fvwm/fvwm.1 (Examples): Language check.
 	PipeRead as synchronous Exec.
-	Better example for PipeRead. 
+	Better example for PipeRead.
 
 2002-06-21  olicha  <olivier.chapuis@free.fr>
 
-	* fvwm/fvwm.1: 
+	* fvwm/fvwm.1:
 	* NEWS:
 	Documented StringEncoding= in font name
 
